--- a/Sales-AI/package.json
+++ b/Sales-AI/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+  "@tailwindcss/vite": "^4.1.11",
+  "react": "^19.1.1",
+  "react-dom": "^19.1.1",
+  "tailwindcss": "^4.1.11",
+  "recharts": "^2.9.0",
+  "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
